--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -26,7 +26,80 @@
     "\n",
     "import numpy as np\n",
     "import scipy\n",
-    "import matplotlib.pyplot as plt"
+    "\n",
+    "import dask.dataframe as dd\n",
+    "from dask.diagnostics import ProgressBar\n",
+    "from matplotlib import pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def import_data(csv_file):\n",
+    "    \"\"\" Returns median of data.\n",
+    "\n",
+    "    :param data: a .csv separated dataset\n",
+    "    :return: a pandas data array, df\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    df = dd.read_csv(csv_file)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inspect_missing_values(data):\n",
+    "    \"\"\" Counting missing values in a DataFrame\n",
+    "    \n",
+    "    :param data: pandas data frame\n",
+    "    :return: pandas data frame\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    missing_values = df.isnull().sum()\n",
+    "    return missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percent_missing_values(data):\n",
+    "    \"\"\" Calculate the percent of missing values in the DataFrame\n",
+    "    \n",
+    "    :param data: pandas data frame\n",
+    "    :return: pandas data frame\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    missing_count = ((missing_values / df.index.size) * 100)\n",
+    "    return missing_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running computations with the compute method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with ProgressBar():\n",
+    "    missing_count_pct = missing_count.compute()\n",
+    "missing_count_pct"
    ]
   }
  ],
