--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -34,6 +34,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kaggle\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/ab/bb20f9b9e24f9a6250f95a432f8d9a7d745f8d24039d7a5a6eaadb7783ba/kaggle-1.5.6.tar.gz (58kB)\n",
+      "\u001b[K     |████████████████████████████████| 61kB 687kB/s eta 0:00:011\n",
+      "\u001b[?25hRequirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.24.2)\n",
+      "Requirement already satisfied: six>=1.10 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.12.0)\n",
+      "Requirement already satisfied: certifi in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2019.9.11)\n",
+      "Requirement already satisfied: python-dateutil in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.8.0)\n",
+      "Requirement already satisfied: requests in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.22.0)\n",
+      "Requirement already satisfied: tqdm in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (4.35.0)\n",
+      "Collecting python-slugify (from kaggle)\n",
+      "  Downloading https://files.pythonhosted.org/packages/f5/ef/c868a9ac657405f051a8a501ac5633e769c54228716b8db7f8d717977e57/python-slugify-3.0.4.tar.gz\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (2.8)\n",
+      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a6/a5/c0b6468d3824fe3fde30dbb5e1f687b291608f9473681bbf7dabbf5a87d7/text_unidecode-1.3-py2.py3-none-any.whl (78kB)\n",
+      "\u001b[K     |████████████████████████████████| 81kB 3.6MB/s eta 0:00:01\n",
+      "\u001b[?25hBuilding wheels for collected packages: kaggle, python-slugify\n",
+      "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.6-cp37-none-any.whl size=72859 sha256=95289f93bb7ffcb846edf98cd9f65cf0e7bf7cfca06495042a5e0b37a640aa0a\n",
+      "  Stored in directory: /Users/jorgenkongsro/Library/Caches/pip/wheels/57/4e/e8/bb28d035162fb8f17f8ca5d42c3230e284c6aa565b42b72674\n",
+      "  Building wheel for python-slugify (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for python-slugify: filename=python_slugify-3.0.4-py2.py3-none-any.whl size=4789 sha256=51ea05319eaf5c78f567ab33a6cf66d4e688e268522f023f253c02dd4ffcd1df\n",
+      "  Stored in directory: /Users/jorgenkongsro/Library/Caches/pip/wheels/24/23/f5/c260686f9180cd755a30123e607207e0f39eba249b7b4b432c\n",
+      "Successfully built kaggle python-slugify\n",
+      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
+      "Successfully installed kaggle-1.5.6 python-slugify-3.0.4 text-unidecode-1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install Kaggle API\n",
+    "!pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
