--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -34,45 +34,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kaggle\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/62/ab/bb20f9b9e24f9a6250f95a432f8d9a7d745f8d24039d7a5a6eaadb7783ba/kaggle-1.5.6.tar.gz (58kB)\n",
-      "\u001b[K     |████████████████████████████████| 61kB 687kB/s eta 0:00:011\n",
-      "\u001b[?25hRequirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.24.2)\n",
+      "Requirement already satisfied: kaggle in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (1.5.6)\n",
+      "Requirement already satisfied: requests in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.22.0)\n",
+      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.24.2)\n",
+      "Requirement already satisfied: python-dateutil in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.8.0)\n",
+      "Requirement already satisfied: python-slugify in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (3.0.4)\n",
+      "Requirement already satisfied: tqdm in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (4.35.0)\n",
       "Requirement already satisfied: six>=1.10 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.12.0)\n",
       "Requirement already satisfied: certifi in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2019.9.11)\n",
-      "Requirement already satisfied: python-dateutil in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.8.0)\n",
-      "Requirement already satisfied: requests in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.22.0)\n",
-      "Requirement already satisfied: tqdm in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (4.35.0)\n",
-      "Collecting python-slugify (from kaggle)\n",
-      "  Downloading https://files.pythonhosted.org/packages/f5/ef/c868a9ac657405f051a8a501ac5633e769c54228716b8db7f8d717977e57/python-slugify-3.0.4.tar.gz\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (3.0.4)\n",
       "Requirement already satisfied: idna<2.9,>=2.5 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (2.8)\n",
-      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a6/a5/c0b6468d3824fe3fde30dbb5e1f687b291608f9473681bbf7dabbf5a87d7/text_unidecode-1.3-py2.py3-none-any.whl (78kB)\n",
-      "\u001b[K     |████████████████████████████████| 81kB 3.6MB/s eta 0:00:01\n",
-      "\u001b[?25hBuilding wheels for collected packages: kaggle, python-slugify\n",
-      "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.6-cp37-none-any.whl size=72859 sha256=95289f93bb7ffcb846edf98cd9f65cf0e7bf7cfca06495042a5e0b37a640aa0a\n",
-      "  Stored in directory: /Users/jorgenkongsro/Library/Caches/pip/wheels/57/4e/e8/bb28d035162fb8f17f8ca5d42c3230e284c6aa565b42b72674\n",
-      "  Building wheel for python-slugify (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for python-slugify: filename=python_slugify-3.0.4-py2.py3-none-any.whl size=4789 sha256=51ea05319eaf5c78f567ab33a6cf66d4e688e268522f023f253c02dd4ffcd1df\n",
-      "  Stored in directory: /Users/jorgenkongsro/Library/Caches/pip/wheels/24/23/f5/c260686f9180cd755a30123e607207e0f39eba249b7b4b432c\n",
-      "Successfully built kaggle python-slugify\n",
-      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
-      "Successfully installed kaggle-1.5.6 python-slugify-3.0.4 text-unidecode-1.3\n"
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (3.0.4)\n",
+      "Requirement already satisfied: text-unidecode>=1.3 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from python-slugify->kaggle) (1.3)\n"
      ]
     }
    ],
    "source": [
     "# Install Kaggle API\n",
+    "# How to setup: https://github.com/Kaggle/kaggle-api\n",
+    "# or visit: https://adityashrm21.github.io/Setting-Up-Kaggle/\n",
+    "\n",
     "!pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ref                                            deadline             category            reward  teamCount  userHasEntered  \r\n",
+      "---------------------------------------------  -------------------  ---------------  ---------  ---------  --------------  \r\n",
+      "digit-recognizer                               2030-01-01 00:00:00  Getting Started  Knowledge       2576            True  \r\n",
+      "titanic                                        2030-01-01 00:00:00  Getting Started  Knowledge      11305            True  \r\n",
+      "house-prices-advanced-regression-techniques    2030-01-01 00:00:00  Getting Started  Knowledge       4654           False  \r\n",
+      "imagenet-object-localization-challenge         2029-12-31 07:00:00  Research         Knowledge         51           False  \r\n",
+      "competitive-data-science-predict-future-sales  2019-12-31 23:59:00  Playground           Kudos       4322           False  \r\n",
+      "Kannada-MNIST                                  2019-12-17 23:59:00  Playground       Knowledge        276           False  \r\n",
+      "bigquery-geotab-intersection-congestion        2019-12-12 23:59:00  Playground           Kudos        222           False  \r\n",
+      "cat-in-the-dat                                 2019-12-09 23:59:00  Playground            Swag        671           False  \r\n",
+      "understanding_cloud_organization               2019-11-18 23:59:00  Research           $10,000        702           False  \r\n",
+      "3d-object-detection-for-autonomous-vehicles    2019-11-12 23:59:00  Featured           $25,000        231           False  \r\n",
+      "rsna-intracranial-hemorrhage-detection         2019-11-11 23:59:00  Featured           $25,000        771           False  \r\n",
+      "severstal-steel-defect-detection               2019-10-24 23:59:00  Featured          $120,000       2042           False  \r\n",
+      "kuzushiji-recognition                          2019-10-14 23:59:00  Playground         $15,000        270           False  \r\n",
+      "youtube8m-2019                                 2019-10-11 23:59:00  Research           $25,000        283           False  \r\n",
+      "ieee-fraud-detection                           2019-10-03 23:59:00  Research           $20,000       6381           False  \r\n",
+      "open-images-2019-object-detection              2019-10-01 23:59:00  Research           $25,000        559           False  \r\n",
+      "open-images-2019-visual-relationship           2019-10-01 23:59:00  Research           $25,000        201           False  \r\n",
+      "open-images-2019-instance-segmentation         2019-10-01 23:59:00  Research           $25,000        193           False  \r\n",
+      "recursion-cellular-image-classification        2019-09-26 23:59:00  Research           $13,000        866           False  \r\n",
+      "aptos2019-blindness-detection                  2019-09-07 23:59:00  Featured           $50,000       2943           False  \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle competitions DAT300"
    ]
   },
   {
