--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -52,10 +52,7 @@
    "outputs": [],
    "source": [
     "# Download Kaggle data using Kaggle API\n",
-    "!kaggle competitions download -c dat300-ca1-autumn-2019\n",
-    "\n",
-    "# Unzip Kaggle data\n",
-    "!unzip dat300-ca1-autumn-2019.zip"
+    "!kaggle competitions download -c dat300-ca1-autumn-2019\n"
    ]
   },
   {
@@ -65,7 +62,7 @@
    "outputs": [],
    "source": [
     "# Unzip Kaggle data\n",
-    "!unzip \"dat300-ca1-autumn-2019.zip\""
+    "!unzip \"dat300-ca1-autumn-2019.zip\" -d \"/tmp/whatever\""
    ]
   },
   {
