--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,61 +31,32 @@
     "\n",
     "import dask.dataframe as dd\n",
     "from dask.diagnostics import ProgressBar\n",
-    "from matplotlib import pyplot as plt\n"
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import skimage.io\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting kaggle\n",
-      "Requirement already satisfied: certifi in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2019.6.16)\n",
-      "Collecting python-slugify (from kaggle)\n",
-      "Requirement already satisfied: six>=1.10 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.12.0)\n",
-      "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (1.24.2)\n",
-      "Requirement already satisfied: python-dateutil in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.8.0)\n",
-      "Requirement already satisfied: requests in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (2.22.0)\n",
-      "Requirement already satisfied: tqdm in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from kaggle) (4.32.1)\n",
-      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle)\n",
-      "  Using cached https://files.pythonhosted.org/packages/a6/a5/c0b6468d3824fe3fde30dbb5e1f687b291608f9473681bbf7dabbf5a87d7/text_unidecode-1.3-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (3.0.4)\n",
-      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/jorgenkongsro/anaconda3/lib/python3.7/site-packages (from requests->kaggle) (2.8)\n",
-      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
-      "Successfully installed kaggle-1.5.6 python-slugify-3.0.4 text-unidecode-1.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Install Kaggle API\n",
     "# How to setup: https://github.com/Kaggle/kaggle-api\n",
     "# or visit: https://adityashrm21.github.io/Setting-Up-Kaggle/\n",
     "\n",
-    "!pip install kaggle"
+    "#!pip install kaggle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading dat300-ca1-autumn-2019.zip to /Users/jorgenkongsro/git/DAT300/DAT300_coursework\n",
-      "100%|█████████████████████████████████████▉| 1.61G/1.61G [01:59<00:00, 16.3MB/s]\n",
-      "100%|██████████████████████████████████████| 1.61G/1.61G [01:59<00:00, 14.4MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download Kaggle data using Kaggle API\n",
-    "!kaggle competitions download -c dat300-ca1-autumn-2019\n"
+    "#!kaggle competitions download -c dat300-ca1-autumn-2019\n"
    ]
   },
   {
@@ -95,25 +66,14 @@
    "outputs": [],
    "source": [
     "# Unzip Kaggle data\n",
-    "!unzip \"dat300-ca1-autumn-2019.zip\" -d \"/tmp/whatever\""
+    "#!unzip \"dat300-ca1-autumn-2019.zip\" -d \"/tmp/whatever\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['y_test_sampleSubmission.csv', 'X_train.csv', 'y_train.csv', 'X_test.csv']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List files in directory\n",
     "\n",
@@ -127,24 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['f1', 'f2', 'f3', 'f4', 'f5', 'f6', 'f7', 'f8', 'f9', 'f10',\n",
-       "       ...\n",
-       "       'f153', 'f154', 'f155', 'f156', 'f157', 'f158', 'f159', 'f160', 'f161',\n",
-       "       'f162'],\n",
-       "      dtype='object', length=162)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def import_data(csv_file):\n",
     "    \"\"\" Returns median of data.\n",
@@ -160,50 +105,20 @@
     "\n",
     "xtrain_df = import_data(workdir + 'x_train.csv')\n",
     "xtrain_df.columns\n",
+    "xtrain_df.head()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def inspect_missing_values(csv_file):\n",
-    "    \"\"\" Counting missing values in a DataFrame\n",
-    "    \n",
-    "    :param data: pandas data frame\n",
-    "    :return: pandas data frame\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    df = dd.read_csv(csv_file)\n",
-    "    missing_values = df.isnull().sum()\n",
-    "    return missing_values\n",
-    "\n",
-    "xtrain_df_missing=inspect_missing_values(workdir + 'x_train.csv')\n",
-    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[###############                         ] | 37% Completed | 13.3s"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Check for missing values in feature f1\n",
+    "# View image data\n",
     "\n",
-    "df = dd.read_csv(workdir + 'x_train.csv')\n",
-    "\n",
-    "with ProgressBar():\n",
-    "    print(df['f1'].isnull().values.any().compute())"
+    "plt.figure(figsize=(10, 10))\n",
+    "skimage.io.imshow()"
    ]
   },
   {
@@ -232,17 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "394.46975\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_n_images(df):\n",
     "    \n",
