update jørgen fredag 11

--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "      <td>0.174430</td>\n",
        "      <td>0.151130</td>\n",
        "      <td>0.139410</td>\n",
-       "      <td>1.837900</td>\n",
+       "      <td>1.83790</td>\n",
        "      <td>...</td>\n",
        "      <td>0.130790</td>\n",
        "      <td>0.119300</td>\n",
@@ -181,7 +181,7 @@
        "      <td>0.007132</td>\n",
        "      <td>-0.016892</td>\n",
        "      <td>-0.022459</td>\n",
-       "      <td>-0.310620</td>\n",
+       "      <td>-0.31062</td>\n",
        "      <td>...</td>\n",
        "      <td>-0.038232</td>\n",
        "      <td>0.040767</td>\n",
@@ -205,7 +205,7 @@
        "      <td>0.037016</td>\n",
        "      <td>0.029252</td>\n",
        "      <td>0.010062</td>\n",
-       "      <td>-0.348400</td>\n",
+       "      <td>-0.34840</td>\n",
        "      <td>...</td>\n",
        "      <td>-0.038232</td>\n",
        "      <td>0.040767</td>\n",
@@ -229,7 +229,7 @@
        "      <td>0.021781</td>\n",
        "      <td>0.006546</td>\n",
        "      <td>-0.008835</td>\n",
-       "      <td>-0.286620</td>\n",
+       "      <td>-0.28662</td>\n",
        "      <td>...</td>\n",
        "      <td>0.066729</td>\n",
        "      <td>0.051966</td>\n",
@@ -253,7 +253,7 @@
        "      <td>0.040093</td>\n",
        "      <td>0.021781</td>\n",
        "      <td>0.006546</td>\n",
-       "      <td>-0.380270</td>\n",
+       "      <td>-0.38027</td>\n",
        "      <td>...</td>\n",
        "      <td>0.066729</td>\n",
        "      <td>0.051966</td>\n",
@@ -266,129 +266,9 @@
        "      <td>0.051966</td>\n",
        "      <td>0.051966</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.125640</td>\n",
-       "      <td>0.117730</td>\n",
-       "      <td>0.093123</td>\n",
-       "      <td>0.085359</td>\n",
-       "      <td>0.081110</td>\n",
-       "      <td>0.046831</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.414100</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.048150</td>\n",
-       "      <td>0.022660</td>\n",
-       "      <td>0.016801</td>\n",
-       "      <td>0.013871</td>\n",
-       "      <td>0.013431</td>\n",
-       "      <td>-0.001364</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.443830</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>0.044208</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.149230</td>\n",
-       "      <td>0.040532</td>\n",
-       "      <td>0.031743</td>\n",
-       "      <td>0.008744</td>\n",
-       "      <td>-0.010593</td>\n",
-       "      <td>-0.087940</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.087262</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.228480</td>\n",
-       "      <td>0.209440</td>\n",
-       "      <td>0.149230</td>\n",
-       "      <td>0.142200</td>\n",
-       "      <td>0.098250</td>\n",
-       "      <td>0.040532</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.087262</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>-0.009096</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.089167</td>\n",
-       "      <td>0.073493</td>\n",
-       "      <td>0.069537</td>\n",
-       "      <td>0.055621</td>\n",
-       "      <td>0.053277</td>\n",
-       "      <td>0.043755</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.492080</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.103310</td>\n",
-       "      <td>0.103310</td>\n",
-       "      <td>0.103310</td>\n",
-       "      <td>0.103310</td>\n",
-       "      <td>0.051966</td>\n",
-       "      <td>0.051966</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 162 columns</p>\n",
+       "<p>5 rows × 162 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -398,23 +278,13 @@
        "2  0.079645  0.074518  0.071149  0.052691  0.039653  0.039214  0.037016   \n",
        "3  0.148200  0.101180  0.091218  0.090486  0.051666  0.038042  0.021781   \n",
        "4  0.148200  0.101180  0.091218  0.089167  0.051666  0.043755  0.040093   \n",
-       "5  0.125640  0.117730  0.093123  0.085359  0.081110  0.046831       NaN   \n",
-       "6  0.048150  0.022660  0.016801  0.013871  0.013431 -0.001364       NaN   \n",
-       "7  0.149230  0.040532  0.031743  0.008744 -0.010593 -0.087940       NaN   \n",
-       "8  0.228480  0.209440  0.149230  0.142200  0.098250  0.040532       NaN   \n",
-       "9  0.089167  0.073493  0.069537  0.055621  0.053277  0.043755       NaN   \n",
        "\n",
-       "         f8        f9       f10  ...      f153      f154      f155      f156  \\\n",
-       "0  0.151130  0.139410  1.837900  ...  0.130790  0.119300  0.119300  0.119300   \n",
-       "1 -0.016892 -0.022459 -0.310620  ... -0.038232  0.040767  0.040767  0.040767   \n",
-       "2  0.029252  0.010062 -0.348400  ... -0.038232  0.040767  0.040767  0.040767   \n",
-       "3  0.006546 -0.008835 -0.286620  ...  0.066729  0.051966  0.051966  0.051966   \n",
-       "4  0.021781  0.006546 -0.380270  ...  0.066729  0.051966  0.051966  0.051966   \n",
-       "5       NaN       NaN -0.414100  ...       NaN  0.044208  0.044208  0.044208   \n",
-       "6       NaN       NaN -0.443830  ...       NaN  0.044208  0.044208  0.044208   \n",
-       "7       NaN       NaN -0.087262  ...       NaN -0.009096 -0.009096 -0.009096   \n",
-       "8       NaN       NaN -0.087262  ...       NaN -0.009096 -0.009096 -0.009096   \n",
-       "9       NaN       NaN -0.492080  ...       NaN  0.103310  0.103310  0.103310   \n",
+       "         f8        f9      f10  ...      f153      f154      f155      f156  \\\n",
+       "0  0.151130  0.139410  1.83790  ...  0.130790  0.119300  0.119300  0.119300   \n",
+       "1 -0.016892 -0.022459 -0.31062  ... -0.038232  0.040767  0.040767  0.040767   \n",
+       "2  0.029252  0.010062 -0.34840  ... -0.038232  0.040767  0.040767  0.040767   \n",
+       "3  0.006546 -0.008835 -0.28662  ...  0.066729  0.051966  0.051966  0.051966   \n",
+       "4  0.021781  0.006546 -0.38027  ...  0.066729  0.051966  0.051966  0.051966   \n",
        "\n",
        "       f157      f158      f159      f160      f161      f162  \n",
        "0  0.119300  0.119300  0.119300  0.119300  0.119300  0.119300  \n",
@@ -422,16 +292,11 @@
        "2  0.040767  0.040767  0.040767  0.040767  0.040767  0.040767  \n",
        "3  0.051966  0.051966  0.051966  0.051966  0.051966  0.051966  \n",
        "4  0.051966  0.051966  0.051966  0.051966  0.051966  0.051966  \n",
-       "5  0.044208  0.044208  0.044208       NaN       NaN       NaN  \n",
-       "6  0.044208  0.044208  0.044208       NaN       NaN       NaN  \n",
-       "7 -0.009096 -0.009096 -0.009096       NaN       NaN       NaN  \n",
-       "8 -0.009096 -0.009096 -0.009096       NaN       NaN       NaN  \n",
-       "9  0.103310  0.051966  0.051966       NaN       NaN       NaN  \n",
        "\n",
-       "[10 rows x 162 columns]"
+       "[5 rows x 162 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +318,7 @@
     "x_test_df = import_data(workdir + 'X_test.csv')\n",
     "y_train_df = import_data(workdir + 'y_train.csv')\n",
     "\n",
-    "x_train_df.head(10)"
+    "x_train_df.head()"
    ]
   },
   {
@@ -464,45 +329,34 @@
    "source": [
     "def check_for_missing(dataframe):\n",
     "    \"\"\" Check for missing values in dataframe\n",
-    "    \n",
+    "    :param data: dataframe\n",
+    "    :return: dataframe\n",
     "    \n",
     "    \"\"\"\n",
     "    missing_values = nyc_data_raw.isnull().sum()\n",
+    "    \n",
     "    with ProgressBar():\n",
     "        percent_missing = ((missing_values / nyc_data_raw.index.size) * 100).compute()\n",
+    "        \n",
     "    return percent_missing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "head() got an unexpected keyword argument 'npartitions'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-b2c9759e4466>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mx_filtered_nan\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_train_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'all'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msubset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthresh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mx_filtered_nan\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnpartitions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: head() got an unexpected keyword argument 'npartitions'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def nan_filter(dataframe):\n",
     "    \"\"\" Filter out NaN\n",
-    "    \n",
+    "    :param data: dataframe\n",
+    "    :return: dataframe\n",
     "    \n",
     "    \"\"\"\n",
     "    filtered = dataframe.dropna(how='all', subset=None, thresh=None).compute()\n",
     "\n",
-    "\n",
-    "# Filter out NaNs\n",
-    "x_filtered_nan = x_train_df.dropna(how='all', subset=None, thresh=None).compute()\n",
-    "\n",
-    "x_filtered_nan.head(n=5, npartitions=1, compute=True)"
+    "    return filtered\n",
+    "\n"
    ]
   },
   {
@@ -511,13 +365,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import BernoulliNB, MultinomialNB\n",
-    "from dask.diagnostics import ProgressBar\n",
-    "\n",
-    "bern = BernoulliNB()\n",
-    "with ProgressBar():\n",
-    "    bern.fit(x_train_df, y_train_df)"
+    "# Print the size of a feature\n",
+    "print (x_train_df.count().compute())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -578,6 +435,22 @@
     "with ProgressBar():\n",
     "    missing_count_pct = missing_count.compute()\n",
     "missing_count_pct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build model and train\n",
+    "\n",
+    "from sklearn.naive_bayes import BernoulliNB, MultinomialNB\n",
+    "from dask.diagnostics import ProgressBar\n",
+    "\n",
+    "bern = BernoulliNB()\n",
+    "with ProgressBar():\n",
+    "    bern.fit(x_train_df, y_train_df)"
    ]
   }
  ],
