update jørgen fredag 11

--- a/DAT300_CA1_16.ipynb
+++ b/DAT300_CA1_16.ipynb
@@ -463,8 +463,14 @@
    "outputs": [],
    "source": [
     "def drop_columns(dataframe):\n",
+    "    \"\"\" Drop columns which have more than 50% missing\n",
+    "    :param data: dataframe\n",
+    "    :return: dataframe\n",
+    "    \n",
+    "    \"\"\"\n",
     "    columns_to_drop = list(percent_missing[percent_missing >= 50].index)\n",
-    "    data = dataframe.drop(columns_to_drop, axis=1)"
+    "    data = dataframe.drop(columns_to_drop, axis=1)\n",
+    "    return data"
    ]
   },
   {
@@ -473,9 +479,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drop_rows:\n",
+    "def drop_rows(dataframe):\n",
+    "    \"\"\" Drop rows if more than 0 and less than 5% missing \n",
+    "    :param data: dataframe\n",
+    "    :return: dataframe\n",
+    "    \n",
+    "    \"\"\"\n",
     "    rows_to_drop = list(percent_missing[(percent_missing > 0) & (percent_missing < 5)].index)\n",
-    "    data_clean = data_clean.dropna(subset=rows_to_drop)"
+    "    data_clean = dataframe.dropna(subset=rows_to_drop)"
    ]
   },
   {
@@ -484,13 +495,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def impute_rows:\n",
-    "    with ProgressBar():\n",
-    "    count_of_vehicle_colors = nyc_data_clean_stage1['Vehicle Color'].value_counts().compute()\n",
-    "most_common_color = count_of_vehicle_colors.sort_values(ascending=False).index[0]\n",
-    "\n",
-    "# Fill missing vehicle color with the most common color\n",
-    "nyc_data_clean_stage2 = nyc_data_clean_stage1.fillna({'Vehicle Color': most_common_color})"
+    "def impute_rows(dataframe,feature):\n",
+    "    \"\"\" Impute rows if more than 5% and less than 50% missing\n",
+    "    :param data: dataframe, feature\n",
+    "    :return: dataframe\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    value = median[feature]\n",
+    "    df_impute[feature] = df[feature].fillna(value)\n",
+    "    return df_impute"
    ]
   },
   {
@@ -652,7 +665,7 @@
     "\n",
     "# Split data into train and validation\n",
     "\n",
-    "\n",
+    "# JØRGEN KAN BEGYNNE BYGGE DETTE\n",
     "\n",
     "from sklearn.naive_bayes import BernoulliNB, MultinomialNB\n",
     "from dask.diagnostics import ProgressBar\n",
